# voicebox

./: CHANGELOG.md  PATCH_NOTES.md  justfile  pyproject.toml
.github/workflows/: release.yml
app/src/: App.tsx  main.tsx
app/src/components/Generation/: GenerationForm.tsx
app/src/components/ServerSettings/: ModelManagement.tsx
app/src/lib/: queryClient.ts
app/src/lib/api/: types.ts
app/src/lib/hooks/: useGenerationForm.ts
app/src/stores/: serverStore.ts
backend/: REFACTOR_PLAN.md  STYLE_GUIDE.md  app.py  main.py  models.py  profiles.py  requirements-mlx.txt  requirements.txt
backend/backends/: __init__.py  base.py  chatterbox_backend.py  chatterbox_turbo_backend.py  hume_backend.py  luxtts_backend.py  mlx_backend.py  pytorch_backend.py  qwen_custom_voice_backend.py
backend/routes/: health.py  models.py
backend/services/: __init__.py  generation.py  task_queue.py
backend/tests/: test_offline_patch.py
backend/utils/: hf_offline_patch.py
docs/overview/: troubleshooting.mdx
docs/plans/: ADDING_TTS_ENGINES.md
tauri/src-tauri/src/: main.rs
